--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/api": "^4.0.29",
+    "@aws-amplify/auth": "^4.3.19",
+    "@aws-amplify/core": "^4.3.11",
+    "@aws-amplify/pubsub": "^4.2.5",
+    "@aws-amplify/ui-react": "^1.2.26",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
